--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,11 +2,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-body {
+/* body {
   @apply leading-[normal] m-0;
-}
-*,
+} */
+/* *,
 ::before,
 ::after {
   border-width: 0;
-}
+} */
